# Squirrel-Radar

./: .gitignore  README.md  docker-compose.yml  macro_cycle_radar.db-shm  macro_cycle_radar.db-wal
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial_schema.py  20260519_0002_drop_agent_memory.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: domain.py
backend/app/prompts/: AGENT.md  agent_intents.yaml  agent_interpretation_prompt.md
backend/app/schemas/: domain.py
backend/app/seeds/: indicators.seed.json  rules.seed.yaml  test_scenarios.seed.json
backend/app/services/: agent_service.py  prompt_service.py  rule_engine.py  seed.py  test_data_service.py
backend/app/services/data_sync/: __init__.py  cli.py  csv_file.py  models.py  official_latest.py  service.py
backend/app/skills/cycle-summary/: SKILL.md
backend/app/skills/data-explain/: SKILL.md
backend/app/skills/family-business/: SKILL.md
backend/app/skills/navigate-month/: SKILL.md
backend/app/skills/risk-watch/: SKILL.md
backend/app/skills/rule-diagnosis/: SKILL.md
backend/tests/: test_agent_service.py  test_cycle_flow.py  test_data_sync.py  test_seed_files.py  test_skills.py
docs/: agent-optimization-plan.md  project-status.md  task-list.md
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: AgentCanvas.tsx  AgentContextButton.tsx  AgentWorkbench.tsx  (+5 more)
(+11 files in other folders)
